--- a/COVIDA/COVIDA.csproj
+++ b/COVIDA/COVIDA.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Centro.cs" />
+    <Compile Include="Data.cs" />
     <Compile Include="Menu.cs" />
     <Compile Include="Voluntario.cs" />
     <Compile Include="Donacion.cs" />
