--- a/COVIDA/COVIDA.csproj
+++ b/COVIDA/COVIDA.csproj
@@ -44,7 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Centro.cs" />
-    <Compile Include="Sistemas.cs" />
+    <Compile Include="Sistema.cs" />
     <Compile Include="Menu.cs" />
     <Compile Include="Voluntario.cs" />
     <Compile Include="Donacion.cs" />
