--- a/COVIDA/COVIDA.csproj
+++ b/COVIDA/COVIDA.csproj
@@ -44,8 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Centro.cs" />
-    <Compile Include="Sistemas.cs" />
     <Compile Include="Menu.cs" />
+    <Compile Include="Sistema.cs" />
     <Compile Include="Voluntario.cs" />
     <Compile Include="Donacion.cs" />
     <Compile Include="Producto.cs" />
