--- a/COVIDA/COVIDA.csproj
+++ b/COVIDA/COVIDA.csproj
@@ -44,10 +44,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Centro.cs" />
+    <Compile Include="DonacionEconomica.cs" />
+    <Compile Include="DonacionProducto.cs" />
     <Compile Include="Menu.cs" />
     <Compile Include="Sistema.cs" />
     <Compile Include="Voluntario.cs" />
-    <Compile Include="Donacion.cs" />
     <Compile Include="Producto.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
